# openXML-office

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.sh
V3/: README.md  SUMMARY.md
V3/document/: chart.md  pages.md  picture.md  shape.md  table.md  word.md
V3/ffi/: document.md  presentation.md  spreadsheet.md
V3/presentation/: shape.md
V3/spreadsheet/: excel.md  shape.md
V3/welcome/: benchmark.md  introduction.md  license.md  privacy-policy.md  status-badge.md
cs/: .gitignore  CMakeLists.txt  Directory.Build.props  README.md  draviavemal.sln  openxml-office.sln
cs/Document/: Document.csproj
cs/Fbs/: Fbs.csproj  StatusCode.cs
cs/Presentation/: Presentation.csproj
cs/Proto/: Proto.csproj
cs/Spreadsheet/: Excel.cs  Spreadsheet.csproj
cs/Test/: Spreadsheet.cs  Test.csproj
cs/openxml_office/: openxml_office.csproj
cs/test/: document.cs  presentation.cs  spreadsheet.cs  test.csproj
fbs/: consolidated.fbs
fbs/document_2007/: consolidated.fbs  (+2 more)
go/: .gitignore  CMakeLists.txt  binding.go  config.yml  go.mod
java/: .gitignore  CMakeLists.txt
openxmloffice-rs/document/: Cargo.toml
proto/: .gitignore  CMakeLists.txt  README.MD
python/: README.md  build_bindings.py  setup.py
rs/: CMakeLists.txt  Cargo.toml  README.md  test.xlsx
rs-api/: CMakeLists.txt
rs-ffl/: Cargo.toml
rs-ffl/fbs/: Cargo.toml
rs-ffl/fbs/src/: lib.rs
rs-ffl/src/: lib.rs  status_code.rs
rs-ffl/src/spreadsheet/: excel.rs
rs/document/: Cargo.toml
rs/document/src/: lib.rs
rs/document/src/implements/: word.rs
rs/document/src/structs/: mod.rs
rs/document/src/tests/: .gitignore  test_document.rs
rs/fbs/: Cargo.toml
rs/fbs/src/: lib.rs
rs/ffi/: Cargo.toml
rs/ffi/src/: lib.rs
rs/global/: Cargo.toml
rs/global/src/: lib.rs
rs/global/src/charts/: mod.rs
rs/global/src/implements/: core_properties.rs  mod.rs
rs/global/src/implements/parts/: content_types.rs  content_types.xml  core_properties.rs  master_rels.rs  relations.rs  rels.xml  theme.rs
rs/global/src/structs/: mod.rs
rs/global/src/structs/parts/: content_types.rs  core_properties.rs  master_rels.rs  mod.rs  theme.rs
rs/global/src/traits/: xml_file.rs
rs/presentation/: Cargo.toml
rs/presentation/src/: lib.rs
rs/presentation/src/implements/: power_point.rs
rs/presentation/src/tests/: test_power_point.rs
rs/proto/: Cargo.toml
rs/proto/src/global/year_2007/: CorePropertiesModel.rs  ThemeModel.rs  mod.rs
rs/proto/src/presentation/year_2007/: PowerPointProperties.rs  mod.rs
rs/proto/src/spreadsheet/year_2007/: ExcelProperties.rs  mod.rs
rs/spreadsheet/: Cargo.toml
rs/spreadsheet/src/: lib.rs
rs/spreadsheet/src/implements/: excel.rs  workbook.rs  workbook.sql
rs/spreadsheet/src/implements/parts/: worksheet.rs
rs/spreadsheet/src/implements/services/: mod.rs
rs/spreadsheet/src/structs/: excel.rs  workbook.rs
rs/spreadsheet/src/structs/parts/: mod.rs
rs/spreadsheet/src/tests/: test_excel.rs  test_file.xlsx
rs/src/: lib.rs
rs/src/document/: mod.rs
rs/src/document/document_2007/: mod.rs  word.rs
rs/src/document/implements/: mod.rs  word.rs
rs/src/document/structs/: word.rs
rs/src/document/tests/: test_file.docx
rs/src/files/: database.rs  mod.rs  office_document.rs  office_document.sql
rs/src/files/implements/: mod.rs
rs/src/files/xml/: mod.rs  xml_deserialize.rs  xml_serialize.rs  xml_tree.rs
rs/src/global/: mod.rs  reference_dictionary.rs
rs/src/global/global_2007/: mod.rs
rs/src/global/global_2007/charts/: bar_column.rs  base.rs  mod.rs
rs/src/global/global_2007/models/: common_properties.rs  mod.rs
rs/src/global/global_2007/parts/: content_types.rs  content_types.xml  core_properties.rs  core_properties.xml  mod.rs  relations.rs  theme.rs  theme.xml
rs/src/global/global_2007/traits/: enums.rs  mod.rs  xml_file.rs  xml_parts.rs
rs/src/global/implements/parts/: content_types.rs  core_properties.rs  mod.rs  relations.rs  theme.rs
rs/src/global/references/: mod.rs  order_dictionary.rs
rs/src/global/structs/parts/: content_types.rs  master_rels.rs  theme.rs
rs/src/global/traits/: mod.rs  xml_file.rs
rs/src/macros/: mod.rs  sql_query_file.rs
rs/src/presentation/: mod.rs
rs/src/presentation/implements/: mod.rs  power_point.rs
rs/src/presentation/presentation_2007/: mod.rs  power_point.rs
rs/src/presentation/structs/: mod.rs  power_point.rs
rs/src/presentation/tests/: .gitignore  mod.rs  test_file.pptx
rs/src/spreadsheet/: mod.rs
rs/src/spreadsheet/implements/: excel.rs  mod.rs  workbook.rs
rs/src/spreadsheet/implements/parts/: worksheet.rs
rs/src/spreadsheet/spreadsheet_2007/: excel.rs  excel.sql  mod.rs
rs/src/spreadsheet/spreadsheet_2007/models/: mod.rs  style.rs  worksheet.rs
rs/src/spreadsheet/spreadsheet_2007/parts/: mod.rs  workbook.rs  workbook.xml  worksheet.rs  worksheet.sql  worksheet.xml
rs/src/spreadsheet/spreadsheet_2007/services/: calculation_chain.rs  calculation_chain.sql  common_service.rs  mod.rs  share_string.rs  share_string.sql  style.rs  style.sql  style.xml
rs/src/spreadsheet/structs/: excel.rs
rs/src/spreadsheet/structs/parts/: worksheet.rs
rs/src/spreadsheet/structs/services/: mod.rs
rs/src/spreadsheet/tests/: .gitignore
rs/src/tests/: mod.rs  test_document.rs  test_excel.rs  test_power_point.rs
rs/src/tests/TestFiles/: basic_test.xlsx  large_file.xlsx
rs/src/utils/: converters.rs  file_handling.rs  mod.rs  xml_helper.rs
rs/src/xml/implements/: mod.rs  open_xml_archive.rs
rs/src/xml/structs/: mod.rs  open_xml_archive.rs
rs/src/xml/utils/: mod.rs
rs/xml/: Cargo.toml
rs/xml/src/: lib.rs
rs/xml/src/implements/: open_xml_archive.rs  open_xml_archive.sql
rs/xml/src/structs/: open_xml_archive.rs  open_xml_archive_read.rs
rs/xml/src/utils/: file_handling.rs  xml_helper.rs
rs_api/: Cargo.toml
rs_ffi/: Cargo.toml  README.md  build.rs  cbinding.toml  pyproject.toml
rs_ffi/src/: lib.rs  status_code.rs  utils.rs
rs_ffi/src/document/: word.rs
rs_ffi/src/presentation/: mod.rs  power_point.rs
rs_ffi/src/spreadsheet/: excel.rs
(+123 files in other folders)
