[package]
name = "draviavema_openxml_office"
description = "Crate to create and manipulate excel,power point and word documents"
license = "MIT"
repository = "https://github.com/DraviaVemal/openxml-office"
documentation = "https://openxml-office.draviavemal.com/"
version = "4.0.0"
edition = "2021"
msrv = "1.32.0"

[dependencies]
sysinfo = "0.29"
anyhow = "1.0.90"
chrono = "0.4.38"
flate2 = "1.0.34"
quick-xml = { version = "0.37.0" }
rusqlite = { version = "0.32.0", features = ["bundled"] }
tempfile = "3.13.0"
zip = "2.2.0"
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }

[dev-dependencies]
criterion = "0.4"
