[package]
name = "draviavemal-openxml_office"
authors = ["Dravia Vemal"]
description = "Crate to create and manipulate excel,power point and word documents"
license = "MIT"
repository = "https://github.com/DraviaVemal/openxml-office"
documentation = "https://openxml-office.draviavemal.com/"
homepage = "https://openxml-office.draviavemal.com/"
readme = "./README.md"
keywords = ["office", "openxml", "xlsx", "pptx", "docx"]
categories = ["filesystem", "development-tools"]
version = "4.0.0-alpha.4"
edition = "2021"

[dependencies]
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
anyhow = "1.0.90"
chrono = "0.4.38"
flate2 = "1.0.34"
quick-xml = { version = "0.37.0" }
tempfile = "3.13.0"
zip = "2.2.0"
serde = { version = "1.0.215", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.10.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5"
