[package]
name = "openxmloffice_ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
openxmloffice_spreadsheet = { path = "../spreadsheet", version = ">= 0.1.0" }
openxmloffice_document = { path = "../document", version = ">= 0.1.0" }
openxmloffice_presentation = { path = "../presentation", version = ">= 0.1.0" }
