[package]
name = "openxmloffice_presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
openxmloffice_xml = { path = "../xml", version = ">= 0.1.0" }
openxmloffice_fbs = { path = "../fbs", version = ">= 0.1.0" }
openxmloffice_global = { path = "../global", version = ">= 0.1.0" }
openxmloffice_spreadsheet = { path = "../spreadsheet", version = ">= 0.1.0" }
