[package]
name = "openxmloffice_spreadsheet"
version = "0.1.0"
edition = "2021"

[dependencies]
openxmloffice_xml = { path = "../xml", version = ">= 0.1.0" }
openxmloffice_global = { path = "../global", version = ">= 0.1.0" }
quick-xml = { version = "0.37.0", features = ["serialize"] }
serde = "1.0.214"
anyhow = "1.0.91"
rusqlite = { version = "0.32.0", features = ["bundled"] }
